--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router": "^3.0.19"
+    "@types/react-router": "^3.0.19",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
